--- a/source/_posts/创建一个不能被继承的类.md
+++ b/source/_posts/创建一个不能被继承的类.md
@@ -5,6 +5,9 @@ tags:
 categories:
     - "practice"
     - "C/C++"
+keywords:
+    - "类"
+    - "继承"
 ---
 
 ## 题目：
@@ -57,7 +60,7 @@ int main(){
 }
 ```
 不定义man的继承类son，正常输出man的age = 18
-![](http://p3ax8ersb.bkt.clouddn.com/201801291732_992.png)
+![](http://p3ax8ersb.bkt.clouddn.com/201801291732_992.png-960.jpg)
 
 定义man的继承类son失败
-![](http://p3ax8ersb.bkt.clouddn.com/201801291733_414.png)
+![](http://p3ax8ersb.bkt.clouddn.com/201801291733_414.png-<960 class="jpg"></960>)
