--- a/source/_posts/二叉树的基本实现.md
+++ b/source/_posts/二叉树的基本实现.md
@@ -4,7 +4,7 @@ date: 2018-03-06 15:47:19
 tags:
 categories:
     - "knowledge"
-    - "C/C++"
+    - "数据结构"
 keywords:
     - "C++"
     - "binarytree"
